# auth_service

./: .coverage  pyproject.toml  requirements.txt
app/: run.py
app/config/: cache.py  database.py  logger.py  settings.py
app/middleware/: session_middleware.py  validate_session.py
app/repository/: postgres_session.py  postgres_session_repository.py  redis_session.py  redis_session_repository.py  user.py  user_repository.py
app/routes/: router.py
app/routes/api/: api_router.py
app/routes/api/v1/: other.py  user.py
app/schemas/: user.py
app/tests/: предложение по тестированию от ds.md
app/tests/integration/api_tests/: conftest.py  test_private.py  test_redis_cache.py  test_user.py
app/tests/integration/postgres_tests/: conftest.py  test_session_rep.py  test_user_rep.py
app/tests/integration/redis_tests/: conftest.py  test_redis_rep.py
app/tests/unittests/: test_expire_token.py  test_pwd.py  test_user.py
app/utils/: hash_pwd.py  pwd_utils.py  token_utils.py  user_utils.py
database_sql/: create_tables.sql
