[project]
name = "auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiocache[redis]>=0.12.3",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "colorlog>=6.10.1",
    "fastapi-cache2>=0.2.2",
    "fastapi[all]>=0.138.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
]
